fix mobile layout issues

--- a/client/src/component/comments/Comments.scss
+++ b/client/src/component/comments/Comments.scss
@@ -1,12 +1,4 @@
 .Comments {
   background: #fbfbfb;
   padding: 20px;
-
-  .comment-list {
-    // display: flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-    // justify-content: space-between;
-  }
-
 }
