--- a/client/src/component/movie-card/MovieCard.scss
+++ b/client/src/component/movie-card/MovieCard.scss
@@ -46,4 +46,11 @@
       justify-content: center;
     }
   }
+
+  @media all and (max-width: 768px) {
+   
+    .Movie-List {
+      border: none;
+    }
+  }
 }
