--- a/client/src/component/movie-view/MovieView.scss
+++ b/client/src/component/movie-view/MovieView.scss
@@ -70,10 +70,14 @@
     }
 
     @media all and (max-width: 970px) {
-
+      .movie-image, .movie-details {
+        box-shadow: none;
+      }
+      
       .movie-details {
         padding-left: 20px;
         padding-right: 20px;
+      
         h1 {
           font-size: 16px;
           margin-bottom: 20px;
